--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -10,6 +10,13 @@
   <script src="lib/jasmine-2.2.0/jasmine.js"></script>
   <script src="lib/jasmine-2.2.0/jasmine-html.js"></script>
   <script src="lib/jasmine-2.2.0/boot.js"></script>
+•
+  <script src="src/Services.js"></script>
+  <script src="src/BookingDate.js"></script>
+  <script src="src/RoomTypes.js"></script>
+  <script src="src/BookingRequest.js"></script>
+  <script src="src/BookingService.js"></script>
+
   <!-- specs -->
   <script src="spec/BookingServiceSpec.js"></script>
 
