calculate price for service from booking

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,6 +14,7 @@
   <script src="src/Services.js"></script>
   <script src="src/BookingDate.js"></script>
   <script src="src/RoomTypes.js"></script>
+  <script src="src/PriceService.js"></script>
   <script src="src/BookingRequest.js"></script>
   <script src="src/BookingService.js"></script>
 
